# flask-tutorial-1

./: README.md  pyproject.toml  vercel.json
src/: app.py
src/instance/: test.db
src/templates/: base.html  index.html
